I18n: add translations batch 1

--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -70,4 +70,17 @@
     <string name="app_language_title">App language</string>
     <string name="app_language_row">App language: %1$s</string>
     <string name="language_applied">Language updated</string>
+
+    <string name="use_system_language">استخدام لغة النظام</string>
+    <string name="english_language">الإنجليزية</string>
+    <string name="safe_delete_notice">حذف آمن: سيطلب Android تأكيدًا.</string>
+    <string name="info_icon">ℹ️</string>
+    <string name="try_another_filter">جرّب عامل تصفية آخر:</string>
+    <string name="selected_language_marker">✓ </string>
+    <string name="app_language_option">%1$s%2$s</string>
+    <string name="billing_unavailable_message">الفوترة غير متاحة: %1$s</string>
+    <string name="billing_disconnected_message">تم قطع اتصال الفوترة</string>
+    <string name="restore_failed_message">فشلت الاستعادة: %1$s</string>
+    <string name="product_unavailable_message">المنتج غير متاح في هذا الإصدار. تحقّق من معرّف المنتج في Play Console.</string>
+    <string name="purchase_acknowledge_failed">فشل تأكيد عملية الشراء</string>
 </resources>
