--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -70,4 +70,17 @@
     <string name="app_language_title">App language</string>
     <string name="app_language_row">App language: %1$s</string>
     <string name="language_applied">Language updated</string>
+
+    <string name="use_system_language">Systemsprache verwenden</string>
+    <string name="english_language">Englisch</string>
+    <string name="safe_delete_notice">Sicheres Löschen: Android fragt zur Bestätigung.</string>
+    <string name="info_icon">ℹ️</string>
+    <string name="try_another_filter">Anderen Filter versuchen:</string>
+    <string name="selected_language_marker">✓ </string>
+    <string name="app_language_option">%1$s%2$s</string>
+    <string name="billing_unavailable_message">Abrechnung nicht verfügbar: %1$s</string>
+    <string name="billing_disconnected_message">Abrechnung getrennt</string>
+    <string name="restore_failed_message">Wiederherstellung fehlgeschlagen: %1$s</string>
+    <string name="product_unavailable_message">Produkt in diesem Build nicht verfügbar. Prüfen Sie die Produkt-ID in der Play Console.</string>
+    <string name="purchase_acknowledge_failed">Bestätigung des Kaufs fehlgeschlagen</string>
 </resources>
