--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -70,4 +70,17 @@
     <string name="app_language_title">App language</string>
     <string name="app_language_row">App language: %1$s</string>
     <string name="language_applied">Language updated</string>
+
+    <string name="use_system_language">सिस्टम भाषा का उपयोग करें</string>
+    <string name="english_language">अंग्रेज़ी</string>
+    <string name="safe_delete_notice">सुरक्षित हटाना: Android पुष्टि मांगेगा।</string>
+    <string name="info_icon">ℹ️</string>
+    <string name="try_another_filter">कोई दूसरा फ़िल्टर आज़माएँ:</string>
+    <string name="selected_language_marker">✓ </string>
+    <string name="app_language_option">%1$s%2$s</string>
+    <string name="billing_unavailable_message">बिलिंग उपलब्ध नहीं है: %1$s</string>
+    <string name="billing_disconnected_message">बिलिंग डिस्कनेक्ट हो गई</string>
+    <string name="restore_failed_message">रीस्टोर विफल: %1$s</string>
+    <string name="product_unavailable_message">इस बिल्ड में उत्पाद उपलब्ध नहीं है। Play Console में उत्पाद आईडी जांचें।</string>
+    <string name="purchase_acknowledge_failed">खरीद की पुष्टि विफल</string>
 </resources>
