--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -70,4 +70,17 @@
     <string name="app_language_title">App language</string>
     <string name="app_language_row">App language: %1$s</string>
     <string name="language_applied">Language updated</string>
+
+    <string name="use_system_language">Usar idioma del sistema</string>
+    <string name="english_language">Inglés</string>
+    <string name="safe_delete_notice">Eliminación segura: Android pedirá confirmación.</string>
+    <string name="info_icon">ℹ️</string>
+    <string name="try_another_filter">Prueba otro filtro:</string>
+    <string name="selected_language_marker">✓ </string>
+    <string name="app_language_option">%1$s%2$s</string>
+    <string name="billing_unavailable_message">Facturación no disponible: %1$s</string>
+    <string name="billing_disconnected_message">Facturación desconectada</string>
+    <string name="restore_failed_message">Error al restaurar: %1$s</string>
+    <string name="product_unavailable_message">Producto no disponible en esta compilación. Verifica el ID del producto en Play Console.</string>
+    <string name="purchase_acknowledge_failed">No se pudo confirmar la compra</string>
 </resources>
