--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -70,4 +70,17 @@
     <string name="app_language_title">App language</string>
     <string name="app_language_row">App language: %1$s</string>
     <string name="language_applied">Language updated</string>
+
+    <string name="use_system_language">Usa lingua di sistema</string>
+    <string name="english_language">Inglese</string>
+    <string name="safe_delete_notice">Eliminazione sicura: Android chiederà conferma.</string>
+    <string name="info_icon">ℹ️</string>
+    <string name="try_another_filter">Prova un altro filtro:</string>
+    <string name="selected_language_marker">✓ </string>
+    <string name="app_language_option">%1$s%2$s</string>
+    <string name="billing_unavailable_message">Fatturazione non disponibile: %1$s</string>
+    <string name="billing_disconnected_message">Fatturazione disconnessa</string>
+    <string name="restore_failed_message">Ripristino non riuscito: %1$s</string>
+    <string name="product_unavailable_message">Prodotto non disponibile in questa build. Controlla l’ID prodotto nella Play Console.</string>
+    <string name="purchase_acknowledge_failed">Conferma acquisto non riuscita</string>
 </resources>
