--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,6 +50,8 @@
     <string name="big_files">Big files</string>
     <string name="old_files">Old files</string>
     <string name="media_meta">%1$s • %2$s</string>
+    <string name="media_kind_image">Image</string>
+    <string name="media_kind_video">Video</string>
     <string name="swipe_keep">R→Keep</string>
     <string name="swipe_delete">L→Delete</string>
     <string name="permission_denied_message">Permission denied</string>
