--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -85,4 +85,5 @@
     <string name="restore_failed_message">Restore failed: %1$s</string>
     <string name="product_unavailable_message">Product not available in this build. Check Play Console product ID.</string>
     <string name="purchase_acknowledge_failed">Purchase acknowledge failed</string>
+    <string name="unknown_media_name">unknown</string>
 </resources>
