--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -9,7 +9,8 @@
     <string name="queue_items">Queue: %1$d items</string>
     <string name="keep">Keep</string>
     <string name="delete">Delete</string>
-    <string name="delete_notice">Deletion requires Android system confirmation. Nothing leaves your device.</string>
+    <string name="archive">Lưu trữ</string>
+    <string name="move">Di chuyển</string>
     <string name="onboarding_title">Clean your gallery in minutes</string>
     <string name="onboarding_step_swipe">Swipe right to keep. Swipe left to mark for delete.</string>
     <string name="onboarding_step_private">Private by design: media stays on your device.</string>
@@ -49,6 +50,8 @@
     <string name="big_files">Big files</string>
     <string name="old_files">Old files</string>
     <string name="media_meta">%1$s • %2$s</string>
+    <string name="media_kind_image">Hình ảnh</string>
+    <string name="media_kind_video">Video</string>
     <string name="swipe_keep">R→Keep</string>
     <string name="swipe_delete">L→Delete</string>
     <string name="permission_denied_message">Permission denied</string>
@@ -70,7 +73,6 @@
     <string name="app_language_title">App language</string>
     <string name="app_language_row">App language: %1$s</string>
     <string name="language_applied">Language updated</string>
-
     <string name="use_system_language">Dùng ngôn ngữ hệ thống</string>
     <string name="english_language">Tiếng Anh</string>
     <string name="safe_delete_notice">Xóa an toàn: Android sẽ yêu cầu xác nhận.</string>
@@ -83,4 +85,5 @@
     <string name="restore_failed_message">Khôi phục thất bại: %1$s</string>
     <string name="product_unavailable_message">Sản phẩm không khả dụng trong bản dựng này. Kiểm tra mã sản phẩm trong Play Console.</string>
     <string name="purchase_acknowledge_failed">Xác nhận mua hàng thất bại</string>
+    <string name="unknown_media_name">không xác định</string>
 </resources>
